fix: z-index 관련 문제, tailwind 확장 관련 문제 #1

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ body {
 .bg-secondary-accent {
   background-color: #454962;
 }
-.hover-bg-secondary-accent:hover {
+.hover\:bg-secondary-accent:hover {
   background-color: #454962;
 }
 .w-iPhone {
@@ -72,4 +72,17 @@ body {
 }
 .h-iPhone {
   height: 844px;
+}
+
+.translate-x-iPhone {
+  --tw-translate-x: 390px /* 32px */;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-iPhone {
+  --tw-translate-x: -390px /* 32px */;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
